A needless complexity in parent class extractor was eliminated